--- a/config/config.json
+++ b/config/config.json
@@ -8,7 +8,7 @@
   },
   "test": {
     "username": "root",
-    "password": "password",
+    "password": "Shsk0707",
     "database": "workout_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
