--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "post-author-association",
+  "name": "project-fighting",
   "version": "1.0.0",
-  "description": "",
+  "description": "### Setup",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/seulkilee0428/Project-Fighting.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/seulkilee0428/Project-Fighting/issues"
+  },
+  "homepage": "https://github.com/seulkilee0428/Project-Fighting#readme",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
-    "mysql2": "^1.3.6",
-    "sequelize": "^4.3.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.0.0",
+    "mysql2": "^2.1.0",
+    "request": "^2.88.2",
+    "sequelize": "^6.3.3",
+    "sequelize-cli": "^6.2.0"
   }
 }
