--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": "",
+    "password": "Shsk0707",
     "database": "workoutdb",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "",
+    "password": "Shsk0707",
     "database": "workout_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
